# gyges

./: .gitignore  README.md
fichiers-fournis/: board.h  gyges.out  main_example.c
fichiers-fournis/phase-2/: modele_board.c
gyges-main/: .gitignore
phase-1/src/: Makefile  debug-gyges  game.c  game.h  gyges  input_output.c  input_output.h  main.c  test-gyges
phase-2/src/: Makefile  board.c  board.h  gyges.out  input_output.c  main.c  test.txt
phase-3/: rules.md
phase-3/src/: CMakeCache.txt  CMakeLists.txt  Makefile  board.c  board.h  cmake_install.cmake  game.c  game.h  game_driver.h  gyges  input_output.c  input_output.h  main.c  rules.md  window.c  window.h
phase-3/src/CMakeModules/: FindSDL2_gfx.cmake
src/: Makefile  board.h  input_output.c  input_output.h  main.c
